Fixed sidebar jump + footer
I need to figure out the scrolling height

--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 .row.content {
-  height: 2800px;
+  height: 2500px;
 }
-.sidenav {
-  background-color: #c22b2b;
+.sidebar {
+  background-color: #d87e7e;
   height: 100%;
 }
 .affix {
   top: 0px;
+  position: sticky;
+  width: 100%;
   z-index: 9999 !important;
+}
+footer {
+  background-color: #965faf;
+  color: white;
+  padding: 15px;
+}
+header {
+  background-color: #965faf;
+  color: white;
+  padding: 15px;
 }
